# CategoristAI

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  auth.py  users.py
app/core/: __init__.py  config.py  constants.py  database.py  logging.py  security.py
app/models/: __init__.py  token.py  user.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: token_service.py  user_service.py
migrations/: env.py
migrations/versions/: 051d81a4b93c_add_refresh_tokens_table.py  299b97ac3d78_create_users_table.py  8ecae98b85c1_add_role_to_users.py  b2654272dfbc_update_users_table.py
tests/: conftest.py
tests/integration/: test_auth.py  test_users.py
tests/unit/: test_security.py  test_user_service.py
